--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "web",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.1"
-  },
-  "devDependencies": {
-    "@workspace/tsconfig": "workspace:",
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.1"
-  }
+	"dependencies": {
+		"next": "16.0.1",
+		"react": "19.2.0",
+		"react-dom": "19.2.0"
+	},
+	"devDependencies": {
+		"@tailwindcss/postcss": "^4",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"@workspace/tsconfig": "workspace:",
+		"tailwindcss": "^4",
+		"typescript": "^5"
+	},
+	"name": "web",
+	"private": true,
+	"scripts": {
+		"build": "next build",
+		"check": "biome check --write .",
+		"dev": "next dev",
+		"format": "biome format --write .",
+		"lint": "biome lint .",
+		"start": "next start"
+	},
+	"version": "0.1.0"
 }
