--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.3"
 	},
+	"packageManager": "pnpm@10.12.4",
 	"scripts": {
-		"check": "biome check --write .",
-		"format": "biome format --write .",
-		"lint": "biome lint ."
+		"validate:fix": "biome check --write ."
 	}
 }
