--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,37 +3,24 @@ packages:
   - packages/*
 
 catalog:
-  # React エコシステム
   react: 19.2.0
   react-dom: 19.2.0
-
-  # Next.js
   next: 16.0.1
-
-  # Tailwind CSS
-  tailwindcss: 4.1.11
-  "@tailwindcss/postcss": 4.1.11
-
-  # UI コンポーネント
-  "@radix-ui/react-slot": 1.2.3
+  tailwindcss: 4.1.16
+  '@tailwindcss/postcss': 4.1.16
+  '@radix-ui/react-slot': 1.2.3
   class-variance-authority: 0.7.1
   clsx: 2.1.1
   lucide-react: 0.475.0
   next-themes: 0.4.6
   tailwind-merge: 3.3.1
-  tw-animate-css: 1.3.6
-
-  # 開発ツール
-  "@biomejs/biome": 2.3.3
-  "@turbo/gen": 2.5.5
-  typescript: 5.9.2
-
-  # 型定義
-  "@types/node": 20.19.9
-  "@types/react": 19.1.9
-  "@types/react-dom": 19.1.7
-
-  # その他
+  tw-animate-css: 1.4.0
+  '@biomejs/biome': 2.3.3
+  '@turbo/gen': 2.6.0
+  typescript: 5.9.3
+  '@types/node': 20.19.24
+  '@types/react': 19.2.2
+  '@types/react-dom': 19.2.2
   supabase: 2.54.11
 
 onlyBuiltDependencies:
