--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,9 +1,12 @@
 {
 	"dependencies": {
+		"@hookform/resolvers": "^5.2.2",
 		"@workspace/ui": "workspace:",
 		"next": "catalog:",
 		"react": "catalog:",
-		"react-dom": "catalog:"
+		"react-dom": "catalog:",
+		"react-hook-form": "^7.66.0",
+		"valibot": "^1.1.0"
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "catalog:",
