--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,10 +1,14 @@
 {
 	"dependencies": {
+		"@radix-ui/react-label": "^2.1.8",
 		"@radix-ui/react-slot": "catalog:",
+		"@radix-ui/react-switch": "^1.2.6",
 		"class-variance-authority": "catalog:",
 		"clsx": "catalog:",
+		"lucide-react": "catalog:",
 		"react": "catalog:",
 		"react-dom": "catalog:",
+		"react-hook-form": "^7.66.0",
 		"tailwind-merge": "catalog:",
 		"tw-animate-css": "catalog:"
 	},
