--- a/knip.jsonc
+++ b/knip.jsonc
@@ -1,5 +1,6 @@
 {
 	"$schema": "https://unpkg.com/knip@5/schema.json",
+	"ignoreBinaries": ["playwright"],
 	"ignoreDependencies": [],
 	"workspaces": {
 		"apps/web": {
