--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,11 +2,13 @@
 	"dependencies": {
 		"@harusame0616/result": "catalog:",
 		"@hookform/resolvers": "catalog:",
+		"@repo/logger": "workspace:",
 		"@repo/supabase": "workspace:",
 		"@workspace/db": "workspace:",
 		"@workspace/ui": "workspace:",
 		"lucide-react": "catalog:",
 		"next": "catalog:",
+		"pino-pretty": "catalog:",
 		"react": "catalog:",
 		"react-dom": "catalog:",
 		"react-hook-form": "catalog:",
@@ -27,7 +29,7 @@
 	"scripts": {
 		"build": "next build",
 		"check": "biome check --write .",
-		"dev": "next dev",
+		"dev": "next dev | pino-pretty -m message -i application,environment,service,ipAddress,requestId,userId,userAgent,deploymentId,gitCommitSha",
 		"format": "biome format --write .",
 		"lint": "biome lint .",
 		"start": "next start"
