--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -71,7 +71,7 @@ jobs:
         env:
           CI: true
 
-      - name: テスト結果のアップロード
+      - name: テストレポートのアップロード
         if: failure()
         uses: actions/upload-artifact@v4
         with:
@@ -79,7 +79,7 @@ jobs:
           path: apps/web/playwright-report/
           retention-days: 7
 
-      - name: テストスクリーンショットのアップロード
+      - name: テスト結果アップロード
         if: failure()
         uses: actions/upload-artifact@v4
         with:
