--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -38,7 +38,7 @@ catalog:
   '@vitest/browser': 4.0.8
   '@vitest/browser-playwright': 4.0.8
   '@vitest/ui': 4.0.8
-  '@testing-library/react': 16.3.0
+  vitest-browser-react: 0.0.3
   '@vitejs/plugin-react': 5.1.0
   pino: 9.7.0
   pino-pretty: 13.1.2
