--- a/knip.jsonc
+++ b/knip.jsonc
@@ -25,9 +25,9 @@
 			// @source ディレクティブが Unresolved Imports 違反として検出されるため無視
 			"ignore": ["src/styles/globals.css"],
 			"ignoreDependencies": [
-				"@tailwindcss/postcss",
 				// turbo/gen 必要か調査
-				"@turbo/gen"
+				"@turbo/gen",
+				"postcss"
 			]
 		}
 	}
