--- a/packages/supabase/package.json
+++ b/packages/supabase/package.json
@@ -8,6 +8,7 @@
 	},
 	"devDependencies": {
 		"@workspace/tsconfig": "workspace:",
+		"tsx": "catalog:",
 		"typescript": "catalog:"
 	},
 	"exports": {
@@ -19,7 +20,7 @@
 	"packageManager": "pnpm@10.12.4",
 	"private": true,
 	"scripts": {
-		"seed": "node --env-file-if-exists=.env --experimental-strip-types src/seed.ts",
+		"seed": "tsx --env-file-if-exists=.env src/seed.ts",
 		"supabase:reset": "supabase db reset && pnpm seed",
 		"supabase:start": "supabase start",
 		"type:check": "tsc --noEmit"
