--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,6 +6,7 @@
 		"class-variance-authority": "catalog:",
 		"clsx": "catalog:",
 		"lucide-react": "catalog:",
+		"next": "catalog:",
 		"react": "catalog:",
 		"react-dom": "catalog:",
 		"react-hook-form": "catalog:",
