--- a/.github/workflows/browser-test.yml
+++ b/.github/workflows/browser-test.yml
@@ -11,7 +11,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  small-browser-test:
+  browser-test:
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
