ci test:browser

--- a/.github/workflows/browser-test.yml
+++ b/.github/workflows/browser-test.yml
@@ -35,7 +35,7 @@ jobs:
         run: pnpm --filter web exec playwright install --with-deps chromium
 
       - name: ブラウザテストの実行
-        run: pnpm --filter web test --project=browser
+        run: pnpm test:browser
 
       - name: テスト結果のアップロード
         if: failure()
