--- a/.github/workflows/browser-test.yml
+++ b/.github/workflows/browser-test.yml
@@ -44,8 +44,14 @@ jobs:
       - name: Playwright ブラウザのインストール
         run: pnpm --filter web exec playwright install --with-deps chromium
 
+        # 初回実行時に必ず new dependencies optimized: が発生しエラーが出るため一回目はエラーで落とす前提（暫定対策）
       - name: ブラウザテストの実行
-        run: cd apps/web && pnpm test:browser
+        run: pnpm test:browser
+        continue-on-error: true
+
+        # ２回目のエラーは本当のエラー
+      - name: ブラウザテストの実行
+        run: pnpm test:browser
 
       - name: テスト結果のアップロード
         if: failure()
