ビルド、本番サーバー起動時も UTC に変更し、 CLAUDE.md も修正

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,12 +35,12 @@
 	"name": "web",
 	"private": true,
 	"scripts": {
-		"build": "next build",
+		"build": "TZ=Etc/UTC next build",
 		"check": "biome check --write .",
 		"dev": "TZ=Etc/UTC next dev | pino-pretty -m message -i application,environment,service,ipAddress,requestId,userId,userAgent,deploymentId,gitCommitSha",
 		"format": "biome format --write .",
 		"lint": "biome lint .",
-		"start": "next start",
+		"start": "TZ=Etc/UTC next start",
 		"test": "vitest",
 		"test:browser": "vitest --run --project browser",
 		"test:e2e": "playwright test",
