--- a/.github/workflows/server-test.yml
+++ b/.github/workflows/server-test.yml
@@ -47,9 +47,9 @@ jobs:
 
       - name: Supabase の起動
         run: |
-          pnpm --filter @repo/supabase supabase:start && pnpm --filter @repo/supabase supabase:seed
-      - name: データベースマイグレーション
-        run: pnpm --filter @workspace/db db:push && pnpm --filter @workspace/db db:seed
+          pnpm -w supabase:start && pnpm -w supabase:seed
+      - name: データベースリセット
+        run: pnpm -w db:reset
 
       - name: サーバーテストの実行
         run: pnpm --filter web test --project=server
