--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -21,8 +21,7 @@
 	"private": true,
 	"scripts": {
 		"db:generate": "drizzle-kit generate",
-		"db:migrate": "pnpm db:pgschema:create && drizzle-kit migrate",
-		"db:pgschema:create": "tsx --env-file-if-exists=.env src/create-pg-schema.ts",
+		"db:migrate": "drizzle-kit migrate",
 		"db:pgschema:drop": "tsx --env-file-if-exists=.env src/drop-pg-schema.ts",
 		"db:reset": "pnpm db:pgschema:drop && pnpm db:migrate && pnpm db:seed",
 		"db:seed": "tsx --env-file-if-exists=.env src/seed.ts",
