--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,9 +1,8 @@
 {
 	"compilerOptions": {
-		"outDir": "./dist",
-		"rootDir": "./src"
+		"outDir": "./dist"
 	},
 	"exclude": ["node_modules", "dist"],
 	"extends": "@workspace/tsconfig/base.json",
-	"include": ["src/**/*"]
+	"include": ["src/**/*", "drizzle.config.ts"]
 }
