--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -57,6 +57,8 @@ catalog:
   '@radix-ui/react-radio-group': ^1.3.8
   '@radix-ui/react-dropdown-menu': ^2.1.16
   drizzle-seed: 0.3.1
+  '@modelcontextprotocol/sdk': ^1.24.3
+  mcp-handler: ^1.0.4
 
 catalogMode: strict
 
